[gd_scene load_steps=5 format=3 uid="uid://bo1c3m8vgryj"]

[ext_resource type="Script" path="res://src/states/game/gui.gd" id="1_cf3q1"]

[sub_resource type="LabelSettings" id="LabelSettings_jqoxj"]
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_vniax"]
font_size = 48
font_color = Color(0.243137, 0.560784, 0.529412, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_pc3ya"]
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cf3q1")

[node name="TimeDisplay" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
text = "00:00.000"
label_settings = SubResource("LabelSettings_jqoxj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownDisplay" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
text = "Ready..."
label_settings = SubResource("LabelSettings_vniax")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="GemDisplay" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 10.0
offset_right = 121.0
offset_bottom = 80.0
text = "0 / 0"
label_settings = SubResource("LabelSettings_pc3ya")
